change whitespace in terminal output, fix line breaks

--- a/css/main.css
+++ b/css/main.css
@@ -18,5 +18,5 @@ body {
   font-size: 13px;
   line-height: 6px;
   font-family: Consolas,monaco,monospace; 
-  white-space: pre;
+  white-space: pre-line;
 }
